--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Mosquito County Pizza</title>
 
 </head>
-<body>
-        <h1>Mosquito County Pizza</h1>
+<body style="background-color:#39342c">
+        <img src="MCP.png" style="display: block; margin-left: auto; margin-right: auto;">
 
     
 </body>
