--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mosquito County Pizza</title>
 
 </head>
-<body style="background-color:#39342c">
+<body style="background-color:#ffffff">
         <img src="MCP.png" style="display: block; margin-left: auto; margin-right: auto;">
 
     
