--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Mosquito County Pizza</title>
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F6FY2T4NSS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F6FY2T4NSS');
+</script>
+
 <body style="background-color:#000000">
         <img src="MCP.png" style="display: block; margin-left: auto; margin-right: auto;">
 
